--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,8 +4,9 @@ node {
 	}
 	stage('SonarQube Analysis'){
 		def mvnHome = tool 'MVN_HOME'
-		
-		sh '"$MVN_HOME/bin/mvn" clean verify sonar:sonar -Dsonar.projectKey=Ritesh-Goyal_demo-application_AYTl6KUDOJoNJKaIr0dF  -Dsonar.host.url=http://4.188.233.45:9000 -Dsonar.login=sqp_8e26b423b30674c6cdc935c2d55cd48cec4be24d'
+		withEnv(["MVN_HOME=$mvnHome"]) {
+			sh '"$MVN_HOME/bin/mvn" clean verify sonar:sonar -Dsonar.projectKey=Ritesh-Goyal_demo-application_AYTl6KUDOJoNJKaIr0dF  -Dsonar.host.url=http://4.188.233.45:9000 -Dsonar.login=sqp_8e26b423b30674c6cdc935c2d55cd48cec4be24d'
+		}
 	}
 	stage('build'){
 		def mvnHome = tool 'MVN_HOME'
